# humble-bundle-keys

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  selector_broken.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CHOICE_CLAIM_SPEC.md  WHATS_CLAIMABLE.md
humble_bundle_keys/: __init__.py  __main__.py  _browser_fetch.py  _orders_cache.py  api.py  auth.py  browser_choice.py  choice.py  cli.py  diagnose.py  exporter.py  models.py  scraper.py
tests/: RUNBOOK.md  test_api_parser.py  test_browser_choice.py  test_browser_fetch.py  test_cache_counters.py  test_choice.py  test_diagnose_sanitiser.py  test_exporter.py  test_parsers.py  test_reveal_retry.py
tests/fixtures/choice_claim/: README.md  analytics_get_game.json  analytics_tile_click.json  choosecontent_request_response.json  redeemkey_request_response.json
